--- a/index.html
+++ b/index.html
@@ -14,7 +14,25 @@
 <body class="bg-dark">
         
     <main>
-
+        <div class="carousel">
+            <div class="slide selected">
+                <img src="img/01.webp">
+            </div>
+            <div class="slide">
+                <img src="img/02.webp">
+            </div>
+            <div class="slide">
+                <img src="img/03.webp">
+            </div>
+            <div class="slide">
+                <img src="img/04.webp">
+            </div>
+            <div class="slide">
+                <img src="img/05.webp">
+            </div>
+            <div class="previous hidden"><i class="bi bi-chevron-left"></i></div>
+            <div class="next"><i class="bi bi-chevron-right"></i></div>
+        </div>
     </main>
     
     <script type="text/javascript" src="js/script.js"></script>
